[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splmeter"
version = "0.0.7"
authors = [
  { name="Sumeet", email="s.saini@ufl.edu" },
]
description = "SPLMeter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'plotly',
  'schemdraw',
  'scipy'
]

[project.urls]
"Homepage" = "https://github.com/Sumeet2807/splmeter"
"Bug Tracker" = "https://github.com/Sumeet2807/splmeter/issues"